--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="about-wrapper" id="about">
         <h1>ABOUT</h1>
         <div class="profile">
-            <img src="S__22257935.jpg">
+            <img src="img/profile.jpg">
             <div class="profile-name">
                 <h2>ASUKA(27)</h2>
             <p>東京在住/主婦</p>
@@ -66,7 +66,7 @@
             <div class="skill">
                 <h2>Coding</h2>
                 <p class="p1">正確で柔軟な<span>コーディング</span></p>
-                <img src="プログラムアイコン.svg">
+                <img src="img/program-icon.svg">
                 <p class="p2">
                     ご相談いただいた方のご要望をしっかりとヒアリングし、意図を汲み取ったコーディングを心がけています。
                     HTML/CSSをベースに、細かな調整を加えながら、見た目だけでなく使いやすさにも配慮した実装を行います。
@@ -77,7 +77,7 @@
             <div class="skill">
                <h2>Design</h2>
                <p class="p1">ヒアリングに基づいた<span>デザイン</span></p>
-               <img src="紙とペンのアイコン素材.svg">
+               <img src="img/pepar-pen-icon.svg">
                <p class="p2">
                  レイアウトや配色、フォントサイズ、余白のバランスを考え見やすく使いやすいデザインを意識しております。
                  デザインの意図を正しく反映するため、細部までこだわりながら実装を進めていきます。
@@ -91,23 +91,23 @@
 
         <div class="works-contents">
             <a href="01 write/practice.html">
-                <img src="port1.jpg">
+                <img src="img/port1.jpg">
             </a>
 
             <a href="02 PAS-SOL/pas-pol.html">
-                <img src="port2.jpg">
+                <img src="img/port2.jpg">
             </a>
 
             <a href="03 fashion/fashion.html">
-                <img src="port3.jpg">
+                <img src="img/port3.jpg">
             </a>
 
             <a href="04 flower/index.html">
-                <img src="port4.jpg">
+                <img src="img/port4.jpg">
             </a>
 
             <a href="05 colorful/index.html">
-                <img src="port5.jpg">
+                <img src="img/port5.jpg">
             </a>
 
         </div>
