--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="port.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfolio</title>
 </head>
 <body>
     <header>
@@ -90,23 +90,23 @@
         <h1>WORKS</h1>
 
         <div class="works-contents">
-            <a href="01 write/practice.html">
+            <a href="01_write/practice.html">
                 <img src="img/port1.jpg">
             </a>
 
-            <a href="02 PAS-SOL/pas-pol.html">
+            <a href="02_PAS-SOL/pas-pol.html">
                 <img src="img/port2.jpg">
             </a>
 
-            <a href="03 fashion/fashion.html">
+            <a href="03_fashion/fashion.html">
                 <img src="img/port3.jpg">
             </a>
 
-            <a href="04 flower/index.html">
+            <a href="04_flower/index.html">
                 <img src="img/port4.jpg">
             </a>
 
-            <a href="05 colorful/index.html">
+            <a href="05_colorful/index.html">
                 <img src="img/port5.jpg">
             </a>
 
