--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
                 <p class="p1">正確で柔軟な<span>コーディング</span></p>
                 <img src="img/program-icon.svg">
                 <p class="p2">
-                    ご相談いただいた方のご要望をしっかりとヒアリングし、意図を汲み取ったコーディングを心がけています。
-                    HTML/CSSをベースに、細かな調整を加えながら、見た目だけでなく使いやすさにも配慮した実装を行います。
-                    レスポンシブにも対応しており、スマートフォン・タブレットでも快適に閲覧できるデザインを実装します。
+                    主にHTML/CSS.JavaScriptをベースに細かな調整を加えながら見た目だけでなく使いやすさにも配慮した実装を行います。
+                    レスポンシブにも対応しており、スマートフォン・タブレットでも快適に閲覧できるデザインを実装いたします。
                 </p>
 
             </div>
@@ -79,8 +78,8 @@
                <p class="p1">ヒアリングに基づいた<span>デザイン</span></p>
                <img src="img/pepar-pen-icon.svg">
                <p class="p2">
-                 レイアウトや配色、フォントサイズ、余白のバランスを考え見やすく使いやすいデザインを意識しております。
-                 デザインの意図を正しく反映するため、細部までこだわりながら実装を進めていきます。
+                主にfigma,CanvaでのLP制作をメインとしており、ご相談いただいた方のご要望をしっかりとヒアリングし、意図を汲み取ったデザインを心がけております。
+                レイアウトや配色、フォントサイズ、余白のバランスを考え見やすく使いやすいデザインを意識しております。
                </p>
            </div>
          </div>
